--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   },
   "homepage": "https://github.com/401-advanced-javascript-aya/caps#readme",
   "dependencies": {
+    "dot": "^1.1.3",
+    "dotenv": "^8.2.0",
+    "env": "0.0.2",
     "faker": "^5.1.0",
     "jest": "^26.6.1"
   }
