--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "env": "0.0.2",
     "faker": "^5.1.0",
-    "jest": "^26.6.1"
+    "jest": "^26.6.1",
+    "socket.io": "^2.3.0"
   }
 }
